--- a/ReactJS/bg-remove/package.json
+++ b/ReactJS/bg-remove/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "bg-removal",
+  "name": "bg-remove",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "assert": "^2.1.0",
+    "axios": "^1.7.9",
+    "buffer": "^6.0.3",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.1",
+    "https-browserify": "^1.0.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-dropzone": "^14.3.5",
+    "react-router": "^7.1.5",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
+    "stream-browserify": "^3.0.0",
+    "styled-components": "^6.1.15",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "scripts": {
     "start": "react-scripts start",
