--- a/NODEJS/Class no 1/package.json
+++ b/NODEJS/Class no 1/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
@@ -10,7 +11,9 @@
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.6",
     "mongoose-paginate-v2": "^1.8.5",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
+    "openai": "^4.84.1"
   },
   "scripts": {
     "start": "node server.js"
