--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "react": "^19.0.0",
