--- a/My App/My App/.env
+++ b/My App/My App/.env
@@ -1,2 +1,3 @@
+MONGO_URI=mongodb+srv://ar1008264:p5WwdEKyD0SRqffq@cluster0.t1oqd.mongodb.net/cluster0
 USERNAME=ar1008264
 PASSWORD=p5WwdEKyD0SRqffq
