--- a/Expo-App/MyApp/package.json
+++ b/Expo-App/MyApp/package.json
@@ -3,10 +3,10 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -15,29 +15,30 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/dev-server": "^0.7.0",
     "@expo/vector-icons": "^14.0.2",
+    "@ffmpeg/core": "^0.12.10",
+    "@ffmpeg/ffmpeg": "^0.12.15",
     "@react-native-community/slider": "4.5.5",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
-    "expo": "~52.0.39",
+    "expo": "^52.0.39",
     "expo-av": "^15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.14",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.19",
-    "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
-    "expo-video": "~2.0.6",
+    "expo-video": "^2.0.6",
     "expo-video-thumbnails": "^9.0.3",
     "expo-web-browser": "~14.0.2",
-    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -57,6 +58,8 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
+    "metro-config": "^0.82.0",
+    "metro-resolver": "^0.82.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
