--- a/Expo-App/MyApp/package.json
+++ b/Expo-App/MyApp/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.26.10",
     "@expo/dev-server": "^0.7.0",
     "@expo/vector-icons": "^14.0.2",
     "@ffmpeg/core": "^0.12.10",
@@ -31,7 +32,7 @@
     "expo-image-picker": "^16.0.6",
     "expo-linking": "~7.0.5",
     "expo-media-library": "^17.0.6",
-    "expo-router": "~4.0.19",
+    "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -39,6 +40,8 @@
     "expo-video": "^2.0.6",
     "expo-video-thumbnails": "^9.0.3",
     "expo-web-browser": "~14.0.2",
+    "ffmpeg-kit-react-native": "^6.0.2",
+    "metro-runtime": "^0.82.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
