successfully created apk

--- a/React-Native/c-01/app.json
+++ b/React-Native/c-01/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/web.jpg",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.arahmadraza.arahmaddeveloper"
     },
     "web": {
       "bundler": "metro",
