--- a/React-Native/c-01/app.json
+++ b/React-Native/c-01/app.json
@@ -1,10 +1,10 @@
 {
   "expo": {
-    "name": "AR Ahmad Developer",
+    "name": "Facebook",
     "slug": "ar-ahmad-developer",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.jpg",
+    "icon": "./assets/images/facebook.jpg",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,7 +13,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/web.jpg",
+        "foregroundImage": "./assets/images/facebook.jpg",
         "backgroundColor": "#ffffff"
       },
       "package": "com.arahmadraza.arahmaddeveloper"
@@ -21,14 +21,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/facebook.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/facebook.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
