--- a/React-Native/c-01/package.json
+++ b/React-Native/c-01/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "eas-cli": "^16.3.1",
     "expo": "~52.0.43",
     "expo-app-loading": "^2.1.1",
     "expo-auth-session": "~6.0.3",
