--- a/React-Native/c-01/eas.json
+++ b/React-Native/c-01/eas.json
@@ -13,9 +13,16 @@
     },
     "production": {
       "autoIncrement": true
+    },
+    "apk": {
+      "android": {
+        "buildType": "apk",
+        "releaseChannel": "default"
+      }
     }
   },
   "submit": {
     "production": {}
   }
 }
+
