--- a/React-Native/c-01/package.json
+++ b/React-Native/c-01/package.json
@@ -29,8 +29,8 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-random": "^14.0.1",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "^4.0.20",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
@@ -54,8 +54,8 @@
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest": "~29.7.0",
+    "jest-expo": "^52.0.0",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
