--- a/NextJS/best-app/package.json
+++ b/NextJS/best-app/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "tailwind:init": "tailwindcss init -p",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@shadcn/ui": "^0.0.4",
+    "autoprefixer": "^10.4.21",
+    "framer-motion": "^12.11.0",
+    "lucide-react": "^0.510.0",
+    "next": "15.3.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.6"
   }
 }
