--- a/OpenAI Agents SDK/class_07/myhandsoff/pyproject.toml
+++ b/OpenAI Agents SDK/class_07/myhandsoff/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "google-generativeai>=0.8.5",
+    "openai-agents>=0.0.15",
 ]
 
 [project.scripts]
