--- a/OpenAI Agents SDK/basics_agents/myapp/pyproject.toml
+++ b/OpenAI Agents SDK/basics_agents/myapp/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "openai-agents>=0.0.16",
+    "pymongo>=4.13.0",
 ]
 
 [project.scripts]
