--- a/OpenAI Agents SDK/basics_agents/myapp/pyproject.toml
+++ b/OpenAI Agents SDK/basics_agents/myapp/pyproject.toml
@@ -9,8 +9,10 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "fastapi>=0.115.12",
     "openai-agents>=0.0.16",
     "pymongo>=4.13.0",
+    "uvicorn>=0.34.2",
 ]
 
 [project.scripts]
