--- a/🌑NextJS/my-app/package.json
+++ b/🌑NextJS/my-app/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.511.0",
+    "next": "15.3.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.3.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@types/node": "22.15.21",
+    "@types/react": "19.1.6",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.3"
   }
 }
