--- a/🐍Python/FastApi_Postgresql/pyproject.toml
+++ b/🐍Python/FastApi_Postgresql/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
     "fastapi>=0.115.12",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.5",
