--- a/🐍Python/FASTAPI/Authenticate Users/pyproject.toml
+++ b/🐍Python/FASTAPI/Authenticate Users/pyproject.toml
@@ -7,7 +7,11 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.115.12",
     "passlib[berypt]>=1.7.4",
+    "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.9.1",
+    "pymysql>=1.1.1",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.20",
+    "sqlalchemy>=2.0.41",
     "uvicorn[standard]>=0.34.3",
 ]
