--- a/🐍Python/FASTAPI/Authenticate Users/requirements.txt
+++ b/🐍Python/FASTAPI/Authenticate Users/requirements.txt
@@ -5,7 +5,7 @@ click==8.2.1
 colorama==0.4.6
 cryptography==45.0.4
 ecdsa==0.19.1
-fastapi==0.115.12
+fastapi==0.104.1
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
@@ -13,9 +13,9 @@ passlib==1.7.4
 pip==24.2
 pyasn1==0.6.1
 pycparser==2.22
-pydantic==2.11.5
+pydantic==2.5.2
 pydantic-core==2.33.2
-python-dotenv==1.1.0
+python-dotenv==1.0.0
 python-jose==3.5.0
 python-multipart==0.0.20
 pyyaml==6.0.2
@@ -25,6 +25,8 @@ sniffio==1.3.1
 starlette==0.46.2
 typing-extensions==4.14.0
 typing-inspection==0.4.1
-uvicorn==0.34.3
+uvicorn==0.24.0
 watchfiles==1.0.5
 websockets==15.0.1
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
