--- a/🐍Python/FastApi + Postgresql/testing with cursor/pyproject.toml
+++ b/🐍Python/FastApi + Postgresql/testing with cursor/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "fastapi>=0.115.12",
+    "magnum>=20.0.0",
+    "mangum>=0.19.0",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.11.5",
     "sqlalchemy>=2.0.41",
