--- a/🐍Python/FastApi + Postgresql/testing with cursor/requirements.txt
+++ b/🐍Python/FastApi + Postgresql/testing with cursor/requirements.txt
@@ -1,9 +1,11 @@
-fastapi==0.109.2
+fastapi==0.115.12
 uvicorn==0.27.1
 sqlalchemy==2.0.27
 psycopg2-binary==2.9.9
-pydantic==2.6.1
-pydantic[email]
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.9 
+python-multipart==0.0.6
+python-dotenv==1.0.1
+pydantic==2.6.1
+pydantic-settings==2.1.0
+mangum==0.17.0
